#
#--------------------------------------------------------------------------
#
#		CHANGE LOG FOR THE LATEX2HTML RELEASE
#
# What is recorded here are changes to any file of the LaTeX2HTML release
# *meaningful to the user*, such as new options or files, important bug
# fixes etc.
# A more detailed log history can be found within the particular files, near
# the top.
#
#		- treat cygwin as unix
#		- $WORDS_IN_INDEX configurable
#		- fix image size for multline, subequations
#		- remove extra <SPAN> after subequations
#		- equation numbering for multline
#		- close bold, etc, at end of environment
#		- implement memoir document class
#		- fix scanning of latex comments
#		- fix subequation numbering
#		- package nomencl.sty
#		- package nameref.sty
#		- options -cut_ref_num -add_ref_name
#
#--------- v2021
#
#		- implement listings package
#		- support for \hyperref (hyperref.sty and html.sty syntax)
#		- \multirow with automatic width (*)
#		- support for length units em and ex in &convert_length
#		- support for font-, page- and minipage-relative length units
#		- support for specifying image size in wrapfigure
#		- support for commands: \; \, \quad \qquad inside \textsc
#		- \itemize[], \enumerate[], \description[] (discard argument)
#		- &convert_to_unicode in style &#8221; for chars > 255
#		- correct several special symbols for koi8-r encoding
#		- repair \htmladdimg and user scaling in \includegraphics
#		- repair scaling for undefined environments in use_dvipng mode
#		- correct placement of the $\degree$ symbol in use_dvipng mode
#		- repair scaling in nouse_dvipng mode
#		- 256-color gif dithering via png16m followed by ppmquant
#		- correct transparent color specification (for the $\_$ symbol)
#		- correct Makefile for building manual
#		- adjust spacing for eqnarray
#		- fix alignment of eq numbers for safari
#		- fix infinite loop on empty itemize env
#		  https://bugs.debian.org/385276
#		- make link to correct bibliography if there is more than one