@@ -830,7 +830,7 @@ in no particular order:
 save a bit of typing!)
 \item Added a \fn{-debug} command line switch.
 \item Support unbreakable spaces (\~{}) and itallic correction.
-\item Fixed a bug in \fn{pstogif} which caused \fn{ppmquant} never
+\item Fixed a bug in \fn{pstogif} which caused \fn{pnmquant} never
 to be called.
 \item The \verb|\special| \index{special command}
 command can now be used outside
