@@ -1502,7 +1502,7 @@ they are for illustration only and do \emph{not} represent default values.
 \begin{itemize}\label{graphicsutils}%
 \item  \fn{\$GS\_LIB}\texttt{ = '/usr/local/share/ghostscript/4.02';}
 \item  \fn{\$PNMCAT}\texttt{ = '/usr/local/bin/pnmcat';}
-\item  \fn{\$PPMQUANT}\texttt{ = '/usr/local/bin/ppmquant';}
+\item  \fn{\$PNMQUANT}\texttt{ = '/usr/local/bin/pnmquant';}
 \item  \fn{\$PNMFLIP}\texttt{ = '/usr/local/bin/pnmflip';}
 \item  \fn{\$PPMTOGIF}\texttt{ = '/usr/local/bin/ppmtogif';}
 \item  \fn{\$HOWTO\_TRANSPARENT\_GIF}\texttt{ = 'netpbm';}
