@@ -870,7 +870,7 @@ $PNMPAD = '@PNMPAD@';
 $PNMROTATE = '@PNMROTATE@';
 $PNMSCALE = '@PNMSCALE@';
 $PNMCROP = '@PNMCROP@';
-$PPMQUANT = '@PPMQUANT@';
+$PNMQUANT = '@PNMQUANT@';
 
 $GIFTOPNM = '@GIFTOPNM@';
 $JPEGTOPNM = '@JPEGTOPNM@';
