@@ -1297,7 +1297,7 @@ values.
 .PP
  $GS_LIB = '/usr/local/share/ghostscript/4.02';
  $PNMCAT = '/usr/local/bin/pnmcat';
- $PPMQUANT = '/usr/local/bin/ppmquant';
+ $PNMQUANT = '/usr/local/bin/pnmquant';
  $PNMFLIP = '/usr/local/bin/pnmflip';
  $PPMTOGIF = '/usr/local/bin/ppmtogif';
  $HOWTO_TRANSPARENT_GIF = 'netpbm';
