@@ -68,7 +68,7 @@ $cfg{'PNMPAD'} = q|pnmpad|;
 $cfg{'PNMROTATE'} = q|pnmrotate|;
 $cfg{'PNMSCALE'} = q|pnmscale|;
 $cfg{'PNMTOPNG'} = q|pnmtopng|;
-$cfg{'PPMQUANT'} = q|ppmquant|;
+$cfg{'PNMQUANT'} = q|pnmquant|;
 $cfg{'PPMTOGIF'} = q|ppmtogif|;
 $cfg{'PPMTOJPEG'} = q|ppmtojpeg|;
 $cfg{'PREFIX'} = q|/tmp/TeXlive|;
