@@ -112,6 +112,7 @@
 # A more detailed log history can be found within the particular files, near
 # the top.
 #
+#		- pnmquant -norandom    for reproducible builds
 #		- treat cygwin as unix
 #		- $WORDS_IN_INDEX configurable
 #		- fix image size for multline, subequations
